--- a/source-css/ilovedashie.css
+++ b/source-css/ilovedashie.css
@@ -420,13 +420,13 @@ a[href|="/vx62"], a[href|="/dashiepose2"]{
 [](/dashiehelp)|/dashiehelp|[Zpony on Deviantart](http://zpony.deviantart.com/art/RD-Help-356146974)|
 */
 
-a[href|="/ajhai"], a[href|="/dashieguilt"], a[href|="/dashiehai"], a[href|="/dashienudge"], a[href|="/dashiereading"], a[href|="/dashiescared"], a[href|="/dashieskating"], a[href|="/dashievolunteer"], a[href|="/dashiewince"], a[href|="/dashiespeechless"], a[href|="/dashiebrainhurt"], a[href|="/dashiedepressed"], a[href|="/dashieshrug"] {
+a[href|="/ajhai"], a[href|="/dashieguilt"], a[href|="/dashiehai"], a[href|="/dashienudge"], a[href|="/dashiereading"], a[href|="/dashiescared"], a[href|="/dashieskating"], a[href|="/dashievolunteer"], a[href|="/dashiewince"], a[href|="/dashiespeechless"], a[href|="/dashiebrainhurt"], a[href|="/dashiedepressed"], a[href|="/dashieshrug"], a[href|="/dashieglee"], a[href|="/spanishmeerkat"] {
     display: block;
     clear: none;
     float: left;
     height: 130px;
     background-repeat: no-repeat;
-    background-image: url(%%rd-sheet3-v8%%)
+    background-image: url(%%rd-sheet3-v10%%)
 }
 a[href|="/ajhai"]{
 background-position: 0 0; width: 117px; height: 130px;
@@ -466,6 +466,9 @@ background-position: -350px 0; width: 142px; height: 130px;
     }
 a[href|="/dashieshrug"]{
 background-position: -350px -180px; width: 106px; height: 130px;
+    }
+a[href|="/dashieglee"], a[href|="/spanishmeerkat"]{
+background-position: -350px -360px; width: 102px; height: 130px;
     }
 
 /***********************
