--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -891,7 +891,17 @@ a[href|="/ppnervous"] {
 a[href|="/ppnervous"] { 
     background-position: -0px -0px 
     }
-
+a[href|="/adorabelle"] { 
+    display: block; 
+    clear: none; 
+    float: left; 
+    width: 100px; 
+    height: 100px; 
+    background-image: url(%%adorabelle%%)
+    } 
+a[href|="/adorabelle"] { 
+    background-position: -0px -0px;
+    }
 a[href|="/applegrump"] { 
     display: block; 
     clear: none; 
