--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -52,14 +52,8 @@ body, body.res-nightmode:first-of-type {
 /* Banner Image */
 
 #header-bottom-left {
-    background: url(%%BackgroundDesatLight%%) repeat-x 0 0;
+    background: url(%%Background%%) repeat-x 0 0;
     }
-
-/* Note mode currently does not work. Image removed. Contact Civ for a copy of it.
-body.res-nightmode #header-bottom-left {
-    background: url(%%BackgroundDesatNight%%) repeat-x 0 0!important;
-    }
-*/
 
 #header-img {
     vertical-align: bottom;
