--- a/source-css/ponyloungerts.css
+++ b/source-css/ponyloungerts.css
@@ -593,7 +593,14 @@ width: 242px;
 height: 191px;
 background-image: url(%%shyherp%%) !important
 }
-
+a[href|="/rainbowsucks"] {
+display: block;
+clear: none;
+float: left;
+width: 314px;
+height: 194px;
+background-image: url(%%rainbowsucks%%) !important
+}
 
 
 /* -----flair test-----*/
