--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -34,7 +34,6 @@ QueenSerious:
 	> New Background
 
 SeriouslyConky:
-	> added Woona Rave, animated emotes size is standard at X x 130, although width depends based on the images requirements, standard static emotes are being set to the necessary width X x 130; for posterity!
 	> EMOTES AND SHIT m'lady
 	> FLAIR RESIZED TO 25X25, IT'S STAYING, THEY'RE FUN AND AWESOME AND COOL, AND I LOVE THEM!
 	> Organized emotes more, will do until I make sprite, tommorrow most likely
@@ -77,7 +76,7 @@ a.author:after {
 a.author:before{
     content:"Seriously"
     }
-.id-t2_7touf, .id-t2_6n7u8, a.author[href$="Thecursed"], a.author[href$="JustAnotherGDB"], a.author[href$="FluttershyGuy20"], a.author[href$="TheDizzy"], a.author[href$="maku450"], a.author[href$="Ghassul"], a.author[href$="novadies"], a.author[href$="ruffletuffle"], a.author[href$="KillerRabbit1253"], a.author[href$="I_Forget_Shit"], a.author[href$="theKarmaCrusader"], a.author[href$="hiero_"], a.author[href$="petraman"], a.author[href$="Broken_Wagonwheel"], a.author[href$="TheDarkman67"], a.author[href$="Galdion"], a.author[href$="theMagicalCouch"], a.author[href$="bryvood"], a.author[href$="YarnTheory"], a.author[href$="Imaginecat22"], a.author[href$="bobobo1618"], a.author[href$="floutsy"], a.author[href$="cheesemoo"], a.author[href$="Sylverstone14"], a.author[href$="Avebone"], a.author[href$="MrPOSSLQ"], a.author[href$="Nyax-A"], a.author[href$="Danny_Moon"], a.author[href$="MisanthropicCat"], a.author[href$="Cheesebunker"], a.author[href$="sfitzknott"], a.author[href$="FreeqAxel"], a.author[href$="CKTofu"], a.author[href$="pwned1711"], a.author[href$="Danphos"], .id-t2_61u7x, a.author[href$="cezzlo"], a.author[href$="Itsmejohn1"], a.author[href$="pickled_octopus"], a.author[href$="UDNTNOME"], a.author[href$="Apprentice1994"], a.author[href$="dragonblade629"], a.author[href$="Cburger48"], a.author[href$="Berbaw06"], a.author[href$="smfd"], a.author[href$="BettyMcBitterpants"], a.author[href$="bitoku_no_ookami"], a.author[href$="Tentacolt"], a.author[href$="AllTheseApples"], a.author[href$="ThatOneRedditorBrony"], a.author[href$="Scootaluna"], a.author[href$="irreama"], a.author[href$="Happycamper101"], a.author[href$="Lord_Ninka"], a.author[href$="tacomantotherescue"], a.author[href$="CatmanIX"], a.author[href$="nallar"], a.author[href$="MemeticOutlaw"], a.author[href$="Calcos323"],a.author[href$="Sinfulfayt"], a.author[href$="candid_canid"], a.author[href$="Bflat13"], a.author[href$="PUBLIQclopAccountant"], a.author[href$="this_is_whining"], a.author[href$="Iacoizumi"] {
+.id-t2_fjuc1, .id-t2_6n7u8, a.author[href$="Thecursed"], a.author[href$="JustAnotherGDB"], a.author[href$="FluttershyGuy20"], a.author[href$="TheDizzy"], a.author[href$="maku450"], a.author[href$="Ghassul"], a.author[href$="novadies"], a.author[href$="ruffletuffle"], a.author[href$="KillerRabbit1253"], a.author[href$="I_Forget_Shit"], a.author[href$="theKarmaCrusader"], a.author[href$="hiero_"], a.author[href$="petraman"], a.author[href$="Broken_Wagonwheel"], a.author[href$="TheDarkman67"], a.author[href$="Galdion"], a.author[href$="theMagicalCouch"], a.author[href$="bryvood"], a.author[href$="YarnTheory"], a.author[href$="Imaginecat22"], a.author[href$="bobobo1618"], a.author[href$="floutsy"], a.author[href$="cheesemoo"], a.author[href$="Sylverstone14"], a.author[href$="Avebone"], a.author[href$="MrPOSSLQ"], a.author[href$="Nyax-A"], a.author[href$="Danny_Moon"], a.author[href$="MisanthropicCat"], a.author[href$="Cheesebunker"], a.author[href$="sfitzknott"], a.author[href$="FreeqAxel"], a.author[href$="CKTofu"], a.author[href$="pwned1711"], a.author[href$="Danphos"], .id-t2_61u7x, a.author[href$="cezzlo"], a.author[href$="Itsmejohn1"], a.author[href$="pickled_octopus"], a.author[href$="UDNTNOME"], a.author[href$="Apprentice1994"], a.author[href$="dragonblade629"], a.author[href$="Cburger48"], a.author[href$="Berbaw06"], a.author[href$="smfd"], a.author[href$="BettyMcBitterpants"], a.author[href$="bitoku_no_ookami"], a.author[href$="Tentacolt"], a.author[href$="AllTheseApples"], a.author[href$="ThatOneRedditorBrony"], a.author[href$="Scootaluna"], a.author[href$="irreama"], a.author[href$="Happycamper101"], a.author[href$="Lord_Ninka"], a.author[href$="tacomantotherescue"], a.author[href$="CatmanIX"], a.author[href$="nallar"], a.author[href$="MemeticOutlaw"], a.author[href$="Calcos323"],a.author[href$="Sinfulfayt"], a.author[href$="candid_canid"], a.author[href$="Bflat13"], a.author[href$="PUBLIQclopAccountant"], a.author[href$="this_is_whining"], a.author[href$="Iacoizumi"] {
     font-size: 0px !important;
     display: inline-block;
     letter-spacing: -20px;
@@ -85,7 +84,7 @@ a.author:before{
     vertical-align: bottom;
     content: "";
     }
-.id-t2_7touf:after{ 
+.id-t2_fjuc1:after{ 
     content: "Queen Serious ";
     }
 .id-t2_6n7u8:after {
@@ -369,7 +368,7 @@ a.author[href$="Calcos323"]:after {
 
 /*** Side Bar Shit ***/
 .titlebox .number:after {
-    content: " Luna's"
+    content: " Lunatics"
 }
 .titlebox .word:not(:first-child) {
     content: "";
@@ -436,9 +435,10 @@ a.author[href$="Calcos323"]:after {
     background-position: bottom right;
 }
 
-body:first-of-type, body.res-nightmode:first-of-type {
+/*body:first-of-type, body.res-nightmode:first-of-type {
     background: url(%%serishy%%)no-repeat fixed 30% 90% !important
-    }
+    }*/
+
 
 /***  Sidebar Woona  ***/
 
@@ -454,7 +454,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
     }
 
 /***  Seriously? This is seriously the Banner?  ***/
-body #header-bottom-left {
+#header #header-bottom-left {
     background-color:  #8B6969 !important;
     background: url(%%Banner111%%) no-repeat center bottom !important;
     }
@@ -471,6 +471,7 @@ body #header-bottom-left {
     background-repeat: no-repeat;
     margin-bottom: 4px
     }
+
 /***********************
 *
 *        Aprils Emote Sheet
@@ -559,13 +560,8 @@ a[href|="/octaviapleased"] {
     width: 80px;
     background-position: -2657px -0px
 }
-a[href|="/rainbowdashed"], a[href|="/seriouslyderp"], a[href|="/seriouslysalute"], a[href|="/seriouslyfuming"], a[href|="/seriouslyball"], a[href|="/twijackhug"], a[href|="/hhh78"], a[href|="/seriouslyajshocked"], a[href|="/scrunchypossie"], a[href|="/seriouslyshrug"], a[href|="/seriouslycezzlo"], a[href|="/seriouslytwiswag"], a[href|="/woonashy"], a[href|="/woonapounce"], a[href|="/seriouslytoocute"], a[href|="/otaviagreet"], a[href|="/seriouslyclassical"], a[href|="/seriouslystare"], a[href|="/seriouslywtf"], a[href|="/seriouslymusic"], a[href|="/woonapie"] {
-    display: block;
-    clear: none;
-    float: left;
-    height: 130px;
-    background-image: url(%%EmoteSheet2f%%) !important
-}
+a[href|="/rainbowdashed"], a[href|="/seriouslyderp"], a[href|="/seriouslysalute"], a[href|="/seriouslyfuming"], a[href|="/seriouslyball"], a[href|="/twijackhug"], a[href|="/hhh78"], a[href|="/seriouslyajshocked"], a[href|="/scrunchypossie"], a[href|="/seriouslyshrug"], a[href|="/seriouslycezzlo"], a[href|="/seriouslytwiswag"], a[href|="/woonashy"], a[href|="/woonapounce"], a[href|="/seriouslytoocute"], a[href|="/otaviagreet"], a[href|="/seriouslyclassical"], a[href|="/seriouslystare"], a[href|="/seriouslywtf"], a[href|="/seriouslymusic"], a[href|="/woonapie"] 
+{display:block;clear:none;float:left;height:130px;background-image:url(%%EmoteSheet2f%%)!important}
 a[href|="/rainbowdashed"] {
     width: 177px;
     background-position: -0px -0px
@@ -807,7 +803,21 @@ a[href|="/evilcadance"] {
     height: 130px;
     background-image:url(%%EvilCadance%%)
 }
-
+a[href|="/cheericmon"],a[href|="/cheeriflatter"],a[href|="/cheerigetaway"],a[href|="/cheerishame"],a[href|="/cheeriwaitwhat"],a[href|="/seriouslyscarysurprise"],a[href|="/seriouslycasual"],a[href|="/seriouslynotseriousvinyl"],a[href|="/lunayouthere"],a[href|="/couchiepie"],a[href|="/seriouslysrslyocty"],a[href|="/seriouslyshockedocty"],a[href|="/seriouslyscepticalocty"]
+{display:block;clear:none;float:left;background-image:url(%%EmoteSheet5a%%)!important}
+a[href|="/cheericmon"] {width:103px;height:123px;background-position:-0px -0px}
+a[href|="/cheeriflatter"] {width:115px;height:137px;background-position:-103px -0px}
+a[href|="/cheerigetaway"] {width:170px;height:179px;background-position:-218px -0px}
+a[href|="/cheerishame"] {width:192px;height:113px;background-position:-388px -0px}
+a[href|="/cheeriwaitwhat"] {width:127px;height:165px;background-position:-580px -0px}
+a[href|="/seriouslyscarysurprise"] {width:234px;height:150px;background-position:-707px -0px}
+a[href|="/seriouslycasual"] {width:177px;height:150px;background-position:-941px -0px}
+a[href|="/seriouslynotseriousvinyl"] {width:108px;height:150px;background-position:-1118px -0px}
+a[href|="/lunayouthere"] {width:159px;height:150px;background-position:-1226px -0px}
+a[href|="/couchiepie"] {width:171px;height:150px;background-position:-1385px -0px}
+a[href|="/seriouslysrslyocty"] {width:159px;height:150px;background-position:-1556px -0px}
+a[href|="/seriouslyshockedocty"] {width:143px;height:150px;background-position:-1715px -0px}
+a[href|="/seriouslyscepticalocty"] {width:133px;height:150px;background-position:-1858px -0px}
 
 /***********************
 *
@@ -823,46 +833,7 @@ a[href|="/lunawink"] {
     height: 130px;
     background-image:url(%%lunawink%%)
     }
-a[href|="/cheeriflatter"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 116px;
-    height: 137px;
-    background-image:url(%%cheeriflatter%%)
-    }
-a[href|="/seriouslyradtothemax"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 163px;
-    height: 256px;
-    background-image:url(%%radtothemax%%)
-    }
-a[href|="/cheericmon"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 103px;
-    height: 123px;
-    background-image:url(%%cheericmon%%)
-    }
-a[href|="/cheeriwhatisthistrash"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 170px;
-    height: 179px;
-    background-image:url(%%cheerigetaway%%)
-    }
-a[href|="/cheerishame"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 119px;
-    background-image:url(%%cheerishame%%)
-    }
+
  
 a[href|="/seriouslyhappy"], a[href|="/seriouslyunamused"], a[href|="/seriouslyupset"], a[href|="/seriouslypissed"] {
     display: block;
@@ -870,14 +841,6 @@ a[href|="/seriouslyhappy"], a[href|="/seriouslyunamused"], a[href|="/seriouslyup
     float: left;
     height: 130px;
     background-image:url(%%EmotionSheet%%)
-    }
-a[href|="/cheeriwaitwhat"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 127px;
-    height: 165px;
-    background-image:url(%%cheeriwaitwhat%%)
     }
 a[href|="/seriouslydominanttrixie"] {
     display: block;
@@ -1049,11 +1012,7 @@ a[href|="/seriouslybanned"] {
     width: 119px;
     background-position: -1251px -0px
     }
-a[href|="/superseriouslypinkie"] {
-    width: 176px;
-    height: 244px;
-    background-position: -1370px -0px
-    }
+a[href|="/superseriouslypinkie"] {width:176px;height:244px;background-position:-1370px -0px}
 
 
 
@@ -1239,7 +1198,7 @@ a[href|="/luna!"]:nth-of-type(n) {
     background-color: transparent !important
 }*/
 /*** Nightmode fixes for the background ***/
-.content #siteTable div[onclick="click_thing(this)"] {
+/*.content #siteTable div[onclick="click_thing(this)"] {
     background-color: transparent !important
     }
 body.res-nightmode:first-of-type > .content {
@@ -1247,7 +1206,7 @@ body.res-nightmode:first-of-type > .content {
     }
 body.res-nightmode:first-of-type {
     background-color: transparent !important
-    }
+    }*/
 
 /*** Adds a neat style for ####text in posts. (Shamelessly jacked from /r/mylittleandysonic1, I don;t think they'll mind though ***/
 .usertext-body h4 {
