--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -534,6 +534,12 @@ a[href|="/sunsetohyou"]
 a[href|="/rsunsetohyou"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes-flipped%%)!important; background-position: -300% -200%;}
 
+a[href|="/sunsetsneer"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes%%)!important; background-position: 0 -300%;}
+
+a[href|="/rsunsetsneer"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes-flipped%%)!important; background-position: 0 -300%;}
+
 a[href|="/sunnybunch"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes%%)!important}
 
@@ -600,6 +606,12 @@ a[href|="/sunsetexplains"]
 
 a[href|="/rsunsetexplains"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes-flipped%%)!important; background-position: -200% -200%;}
+
+a[href|="/pleadingsunset"],a[href|="/crocodiletears"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes%%)!important; background-position: -300% -200%;}
+
+a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes-flipped%%)!important; background-position: -300% -200%;}
 
 a[href|="/spaceholder"] {
 display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes%%)!important;
