--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2185,3 +2185,13 @@ a[href|="/shutupandtaketavismoney"] {
  background-image: url(%%spritesheet17%%);
  background-position: -0px -1150px;
 } 
+
+a[href|="/tavidashband"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 162px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -1300px;
+} 
