--- a/source-css/appledashquisition.css
+++ b/source-css/appledashquisition.css
@@ -1,11 +1,32 @@
 body{background:url(%%adbackground%%) no-repeat fixed left center}
 
-a[href|="/adelbow"] {
+/* ▬▬ SHEET 1 ▬▬ */
+
+a[href|="/adflank"] {
 float:left;
-width:239px;
-height:210px;
+width:245px;
+height:204px;
 background-repeat:no-repeat;
-background-image:url(%%adelbow%%);
+background-image:url(%%Sheet1%%);
+background-position: 0px 0px;
+}
+
+a[href|="/adbath"] {
+float:left;
+width:225px;
+height:149px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet1%%);
+background-position: -300px -0px;
+}
+
+a[href|="/adkiss"] {
+float:left;
+width:257px;
+height:195px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet1%%);
+background-position: 0px -300px;
 }
 
 a[href|="/adnuzzle"] {
@@ -13,71 +34,64 @@ float:left;
 width:180px;
 height:103px;
 background-repeat:no-repeat;
-background-image:url(%%adnuzzle%%);
+background-image:url(%%Sheet1%%);
+background-position: -300px -300px;
 }
 
-a[href|="/ejr1icgm1wsk26fb"] {
+/* ▬▬ SHEET 1 END ▬▬ */
+
+
+
+/* ▬▬ SHEET 2 ▬▬ */
+
+a[href|="/adsad"] {
 float:left;
-width:450px;
-height:289px;
+width:225px;
+height:175px;
 background-repeat:no-repeat;
-background-image:url(%%ejr1icgm1wsk26fb%%);
+background-image:url(%%Sheet2%%);
+background-position: 0px 0px;
 }
 
-a[href|="/theylooksoreadytofuckeachothersenseless"] {
+a[href|="/adwingboner"] {
 float:left;
-width:299px;
-height:167px;
+width:225px;
+height:201px;
 background-repeat:no-repeat;
-background-image:url(%%theylooksoreadytofuckeachothersenseless%%);
+background-image:url(%%Sheet2%%);
+background-position: -300px 0px;
 }
 
-a[href|="/adreadyforbees"] {
+a[href|="/fallweatherfriends"] {
 float:left;
-width:239px;
-height:209px;
+width:231px;
+height:216px;
 background-repeat:no-repeat;
-background-image:url(%%adreadyforbees%%);
+background-image:url(%%Sheet2%%);
+background-position: 0px -300px;
 }
 
-a[href|="/adkissy"] {
+a[href|="/adsocks"] {
 float:left;
-width:233px;
-height:182px;
+width:300px;
+height:187px;
 background-repeat:no-repeat;
-background-image:url(%%adkissy%%);
+background-image:url(%%Sheet2%%);
+background-position: -300px -300px;
 }
 
-a[href|="/adfeed"] {
-float:left;
-width:223px;
-height:224px;
-background-repeat:no-repeat;
-background-image:url(%%adfeed%%);
-}
+/* ▬▬ SHEET 2 END ▬▬ */
 
-a[href|="/adcuddle"] {
-float:left;
-width:201px;
-height:189px;
-background-repeat:no-repeat;
-background-image:url(%%adcuddle%%);
-}
 
-a[href|="/adglow"] {
-float:left;
-width:218px;
-height:203px;
-background-repeat:no-repeat;
-background-image:url(%%adglow%%);
-}
+/* ▬▬ SHEET 3 ▬▬ 2 and 3 switch */
 
-a[href|="/adflank"] {
+a[href|="/admoustache"] {
 float:left;
-width:245px;
-height:204px;
+width:283px;
+height:177px;
 background-repeat:no-repeat;
-background-image:url(%%adflank%%);
+background-image:url(%%Sheet3%%);
+background-position: 0px 0px;
 }
 
 a[href|="/adpeck"] {
@@ -85,7 +99,163 @@ float:left;
 width:207px;
 height:171px;
 background-repeat:no-repeat;
-background-image:url(%%adpeck%%);
+background-image:url(%%Sheet3%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adfinishline"] {
+float:left;
+width:225px;
+height:107px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet3%%);
+background-position: -300px 0px;
+}
+
+a[href|="/addesire"] {
+float:left;
+width:256px;
+height:128px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet3%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 3 END ▬▬ */
+
+
+/* ▬▬ SHEET 4 ▬▬ */
+
+a[href|="/adcanon"] {
+float:left;
+width:250px;
+height:157px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet4%%);
+background-position: 0px 0px;
+}
+
+a[href|="/theylooksoreadytofuckeachothersenseless"] {
+float:left;
+width:299px;
+height:167px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet4%%);
+background-position: -300px 0px;
+}
+
+a[href|="/chibiad"] {
+float:left;
+width:224px;
+height:224px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet4%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adreadyforbees"] {
+float:left;
+width:239px;
+height:209px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet4%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 4 END ▬▬ */
+
+
+/* ▬▬ SHEET 5 ▬▬ */
+
+a[href|="/ajdribbles"] {
+float:left;
+width:236px;
+height:213px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet5%%);
+background-position: 0px 0px;
+}
+
+a[href|="/adplayful"] {
+float:left;
+width:225px;
+height:177px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet5%%);
+background-position: -300px 0px;
+}
+
+a[href|="/adsparx"] {
+float:left;
+width:256px;
+height:169px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet5%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adpuckerup"] {
+float:left;
+width:226px;
+height:222px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet5%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 5 END ▬▬ */
+
+
+/* ▬▬ SHEET 6 ▬▬ */
+
+a[href|="/adelbow"] {
+float:left;
+width:239px;
+height:210px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet6%%);
+background-position: 0px 0px;
+}
+
+a[href|="/adhaylove"] {
+float:left;
+width:255px;
+height:196px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet6%%);
+background-position: -300px 0px;
+}
+
+a[href|="/adglow"] {
+float:left;
+width:218px;
+height:203px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet6%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adcute"] {
+float:left;
+width:225px;
+height:155px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet6%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 6 END ▬▬ */
+
+
+/* ▬▬ SHEET 7 ▬▬ */
+
+a[href|="/adbored"] {
+float:left;
+width:225px;
+height:145px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet7%%);
+background-position: 0px 0px;
 }
 
 a[href|="/adsleep"] {
@@ -93,23 +263,167 @@ float:left;
 width:231px;
 height:216px;
 background-repeat:no-repeat;
-background-image:url(%%adsleep%%);
+background-image:url(%%Sheet7%%);
+background-position: -300px 0px;
 }
 
-a[href|="/ajdribbles"] {
-float:left;
-width:236px;
-height:213px;
-background-repeat:no-repeat;
-background-image:url(%%ajdribbles%%);
-}
-
-a[href|="/admoustache"] {
+a[href|="/admaredown"] {
 float:left;
 width:283px;
 height:177px;
 background-repeat:no-repeat;
-background-image:url(%%admoustache%%);
+background-image:url(%%Sheet7%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adkissy"] {
+float:left;
+width:233px;
+height:182px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet7%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 7 END ▬▬ */
+
+
+
+/* ▬▬ SHEET 8 ▬▬ */
+
+a[href|="/adlean"] {
+float:left;
+width:225px;
+height:251px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet8%%);
+background-position: 0px 0px;
+}
+
+a[href|="/addespair"] {
+float:left;
+width:225px;
+height:162px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet8%%);
+background-position: -300px 0px;
+}
+
+a[href|="/applebashful"] {
+float:left;
+width:225px;
+height:148px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet8%%);
+background-position: 0px -300px;
+}
+
+a[href|="/adcuddle"] {
+float:left;
+width:201px;
+height:189px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet8%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 8 END ▬▬ */
+
+
+/* ▬▬ SHEET 9 ▬▬ */
+
+a[href|="/adscared"] {
+float:left;
+width:254px;
+height:197px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet9%%);
+background-position: 0px 0px;
+}
+
+a[href|="/highhoof3"] {
+float:left;
+width:225px;
+height:149px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet9%%);
+background-position: -300px 0px;
+}
+
+a[href|="/adfeed"] {
+float:left;
+width:223px;
+height:224px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet9%%);
+background-position: 0px -300px;
+}
+
+a[href|="/yourflankismine"] {
+float:left;
+width:223px;
+height:224px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet9%%);
+background-position: -300px -300px;
+}
+
+/* ▬▬ SHEET 9 END ▬▬ */
+
+
+
+/* ▬▬ SHEET 10 ▬▬ */
+
+a[href|="/adhug"] {
+float:left;
+width:225px;
+height:221px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet10%%);
+background-position: 0px 0px;
+}
+
+a[href|="/adpassion"] {
+float:left;
+width:225px;
+height:126px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet10%%);
+background-position: -350px 0px;
+}
+
+a[href|="/adcuddles"] {
+float:left;
+width:332px;
+height:151px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet10%%);
+background-position: 0px -350px;
+}
+
+a[href|="/adponyride"] {
+float:left;
+width:241px;
+height:208px;
+background-repeat:no-repeat;
+background-image:url(%%Sheet10%%);
+background-position: -350px -350px;
+}
+
+/* ▬▬ SHEET 10 END ▬▬ */
+
+
+/* ▬▬ Unnassigned ▬▬ */
+
+
+
+
+a[href|="/ejr1icgm1wsk26fb"] {
+float:left;
+width:450px;
+height:289px;
+background-repeat:no-repeat;
+background-image:url(%%ejr1icgm1wsk26fb%%);
 }
 
 a[href|="/adbuttpillow"] {
@@ -120,252 +434,33 @@ background-repeat:no-repeat;
 background-image:url(%%adbuttpillow%%);
 }
 
-a[href|="/adbath"] {
-float:left;
-width:225px;
-height:149px;
-background-repeat:no-repeat;
-background-image:url(%%adbath%%);
-}
-
-a[href|="/adbored"] {
-float:left;
-width:225px;
-height:145px;
-background-repeat:no-repeat;
-background-image:url(%%adbored%%);
-}
-
-a[href|="/adpuckerup"] {
-    float:left;
-    width:226px;
-    height:222px;
-    background-repeat:no-repeat;
-    background-image:url(%%adpuckerup%%);
-}
-
-a[href|="/adscared"] {
-    float:left;
-    width:254px;
-    height:197px;
-    background-repeat:no-repeat;
-    background-image:url(%%adscared%%);
-}
-
-a[href|="/adfinishline"] {
-    float:left;
-    width:225px;
-    height:107px;
-    background-repeat:no-repeat;
-    background-image:url(%%adfinishline%%);
-}
-
-a[href|="/addesire"] {
-    float:left;
-    width:256px;
-    height:128px;
-    background-repeat:no-repeat;
-    background-image:url(%%addesire%%);
-}
-
-a[href|="/adsad"] {
-    float:left;
-    width:225px;
-    height:175px;
-    background-repeat:no-repeat;
-    background-image:url(%%adsad%%);
-}
-
-a[href|="/adlean"] {
-    float:left;
-    width:225px;
-    height:251px;
-    background-repeat:no-repeat;
-    background-image:url(%%adlean%%);
-}
-a[href|="/adcute"] {
-    float:left;
-    width:225px;
-    height:155px;
-    background-repeat:no-repeat;
-    background-image:url(%%adcute%%);
-}
-
-a[href|="/yourflankismine"] {
-    float:left;
-    width:223px;
-    height:224px;
-    background-repeat:no-repeat;
-    background-image:url(%%yourflankismine%%);
-}
-
-a[href|="/adponyride"] {
-    float:left;
-    width:241px;
-    height:208px;
-    background-repeat:no-repeat;
-    background-image:url(%%adponyride%%);
-}
-
-a[href|="/adhaylove"] {
-    float:left;
-    width:255px;
-    height:196px;
-    background-repeat:no-repeat;
-    background-image:url(%%adhaylove%%);
-}
-
-a[href|="/applebashful"] {
-    float:left;
-    width:225px;
-    height:148px;
-    background-repeat:no-repeat;
-    background-image:url(%%applebashful%%);
-}
-
-a[href|="/adplayful"] {
-    float:left;
-    width:225px;
-    height:177px;
-    background-repeat:no-repeat;
-    background-image:url(%%adplayful%%);
-}
-
-a[href|="/fallweatherfriends"] {
-    float:left;
-    width:231px;
-    height:216px;
-    background-repeat:no-repeat;
-    background-image:url(%%fallweatherfriends%%);
-}
-
-a[href|="/adhug"] {
-    float:left;
-    width:225px;
-    height:221px;
-    background-repeat:no-repeat;
-    background-image:url(%%adhug%%);
-}
-
-a[href|="/admaredown"] {
-    float:left;
-    width:283px;
-    height:177px;
-    background-repeat:no-repeat;
-    background-image:url(%%admaredown%%);
-}
-
-a[href|="/highhoof3"] {
-    float:left;
-    width:225px;
-    height:149px;
-    background-repeat:no-repeat;
-    background-image:url(%%highhoof3%%);
-}
-
-a[href|="/adwingboner"] {
-    float:left;
-    width:225px;
-    height:201px;
-    background-repeat:no-repeat;
-    background-image:url(%%adwingboner%%);
-}
-
-a[href|="/addespair"] {
-    float:left;
-    width:225px;
-    height:162px;
-    background-repeat:no-repeat;
-    background-image:url(%%addespair%%);
-}
-
-a[href|="/adcuddles"] {
-    float:left;
-    width:332px;
-    height:151px;
-    background-repeat:no-repeat;
-    background-image:url(%%adcuddles%%);
-}
-
-a[href|="/adcanon"] {
-float:left;
-width:250px;
-height:157px;
-background-repeat:no-repeat;
-background-image:url(%%adcanon%%);
-}
-
-a[href|="/adpassion"] {
-float:left;
-width:225px;
-height:126px;
-background-repeat:no-repeat;
-background-image:url(%%adpassion%%);
-}
-
-a[href|="/adsparx"] {
-    float:left;
-    width:256px;
-    height:169px;
-    background-repeat:no-repeat;
-    background-image:url(%%adsparx%%);
-}
-
-a[href|="/adsocks"] {
-    float:left;
-    width:300px;
-    height:187px;
-    background-repeat:no-repeat;
-    background-image:url(%%adsocks%%);
-}
-
-a[href|="/adsocks"] {
-    float:left;
-    width:300px;
-    height:187px;
-    background-repeat:no-repeat;
-    background-image:url(%%adsocks%%);
-}
-
 a[href|="/canada"] {
-    float:left;
-    width:512px;
-    height:342px;
-    background-repeat:no-repeat;
-    background-image:url(%%canada%%);
+float:left;
+width:512px;
+height:342px;
+background-repeat:no-repeat;
+background-image:url(%%canada%%);
 }
 
 a[href|="/sweden"] {
-    float:left;
-    width:555px;
-    height:360px;
-    background-repeat:no-repeat;
-    background-image:url(%%sweden%%);
-}
-
-a[href|="/adkiss"] {
-    float:left;
-    width:257px;
-    height:195px;
-    background-repeat:no-repeat;
-    background-image:url(%%adkiss%%);
-}
-
-a[href|="/chibiad"] {
-    float:left;
-    width:224px;
-    height:224px;
-    background-repeat:no-repeat;
-    background-image:url(%%chibiad%%);
+float:left;
+width:555px;
+height:360px;
+background-repeat:no-repeat;
+background-image:url(%%sweden%%);
 }
 
 a[href|="/burchabow"] {
-    float:left;
-    width:256px;
-    height:170px;
-    background-repeat:no-repeat;
-    background-image:url(%%burchabow%%);
+float:left;
+width:256px;
+height:170px;
+background-repeat:no-repeat;
+background-image:url(%%burchabow%%);
 }
+
+/* ▬▬ Unnassigned End ▬▬ */
+
+
 
 /* Other Stuff (commenting out some so we don't confuse Great BPM Leader Typhos */
 /*
