--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -1,5 +1,5 @@
 /* LIMITS:
- * Limit on number of images uploaded is 50.
+ * Limit on number of images uploaded is 50. Currently at 45/50 - (Could get rid of 2 of them though - snowflake & voted)
  * Limit on CSS size is approx 100,000 characters
  * Limit on image size is 512kB (Approx)
  */
@@ -348,7 +348,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -356,11 +356,11 @@ a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[hre
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"], a[href|="/fshide"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/nerddash"], a[href|="/nerdderpy"], a[href|="/nerdaj"], a[href|="/nerdpinkamena"], a[href|="/nerdrarity"], a[href|="/nerdshy"], a[href|="/nerdtrixie"], a[href|="/nerdpie"], a[href|="/nerdtwi"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"], a[href|="/fshide"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/nerddash"], a[href|="/nerdderpy"], a[href|="/nerdaj"], a[href|="/nerdpinkamena"], a[href|="/nerdrarity"], a[href|="/nerdshy"], a[href|="/nerdtrixie"], a[href|="/nerdpie"], a[href|="/nerdtwi"], a[href|="/nerdscratch"], a[href|="/nerdlyra"], a[href|="/humannerddash"], a[href|="/nerdsunset"], a[href|="/greaserspike"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
-a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"], a[href|="/woonabounce"]
+a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"], a[href|="/woonabounce"], a[href|="/lunanurse"], a[href|="/50sderpy"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -389,7 +389,7 @@ a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/l
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Misfits e */
-a[href|="/twidorable"]
+a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"]
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -413,7 +413,7 @@ a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -425,7 +425,7 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"]
 {background-position: -200% -200%;}
 
 
@@ -434,12 +434,12 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"]
 {background-position: -100% -300%;}
 
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -467,19 +467,19 @@ a[href|="/raridoubt"], a[href|="/nerdtwi"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/flutterdoubt"]
+a[href|="/flutterdoubt"], a[href|="/nerdlyra"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"]
+a[href|="/dashdoubt"], a[href|="/humannerddash"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"]
+a[href|="/zerofucks"], a[href|="/greaserspike"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -575,6 +575,7 @@ a[href|="/downvotingpony"] {background-image: url(%%downvotingpony%%);width:230p
 a[href|="/raribrows"] {background-image: url(%%raribrows%%);width:122px;height:110px;display:block;float:left;}
 a[href|="/cmccovet"] {background-image: url(%%cmccovet%%);width:150px;height:108px;display:block;float:left;}
 a[href|="/kittyluna"] {background-image: url(%%kittyluna%%);width:200px;height:175px;display:block;float:left;}
+a[href|="/twilestianuzzle"] {background-image: url(%%twilestianuzzle%%);width:170px;height:140px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/fillycadance"] {width:100px;height:126px;}
@@ -634,3 +635,5 @@ a[href|="/radiance"], a[href|="/oldenmw"] {width:163px;height:200px;background-p
 a[href|="/sheiscorrect"] {width:140px;height:200px;background-position: -588px -297px;}
 a[href|="/over9000"] {width:150px;height:269px;background-position: -850px -250px;}
 a[href|="/twidorable"] {width:200px;height:112px;}
+a[href|="/nerdcheese"] {width:96px;height:150px;background-position: 0 -112px;}
+a[href|="/50scoco"] {width:153px;height:200px;background-position: -200px 0;}
