--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -5,7 +5,7 @@
 |
 |                      STYLESHEET FOR R/VINYLSCRATCH         
 |        MOSTLY BY KOOBAXION (sub a wub dub dub) AND 007GHG7 (secrit agnt mahn)       
-|ALSO SOME CREDIT GOES TO RAHLYN (that Rhy guy) AND MRJOKER7854 (no who best pone iz) AND ALISTERDX (Da guy who knows teh 'list')
+|ALSO SOME CREDIT GOES TO RAHLYN (that Rhy guy) AND MRJOKER7854 (no who best pone iz) AND ALISTERDX (Da guy who forgot teh 'list')
 |                         RAHLYN IS THE FLAIR GOD
 |            HAI GUIZ I DID NAMEZ SO I HELPED -PINKIE PIE
 */
@@ -694,7 +694,7 @@ a[href|='/vsheh'],a[href|='/vs29'] {width:67px; height:80px;background-position:
 a[href|='/vsyes'],a[href|='/vs2a'] {width:70px; height:73px;background-position: 0px -765px}
 
 
-a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'],a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vscuter'],a[href|='/vswoah'],a[href|='/vshotdamn'],a[href|='/vsdance3'],a[href|='/vsno'],a[href|='/vsermergerd'],a[href|='/vswatching'],a[href|='/vscrazed'],a[href|='/vsweegee'],a[href|='/weegee'],a[href|='/vsblush'],a[href|='/vsorly'],a[href|='/vsohhaithere'],a[href|='/vsraggle'],a[href|='/vsyay'],a[href|='/riverangry'],a[href|='/riversleep'],a[href|='/vsriver'],a[href|='/iwubu'],a[href|='/vs0h'],a[href|='/vs2g'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'],a[href|='/vs0f'],a[href|='/vs1f'],a[href|='/vs2f'],a[href|='/vs0g'],a[href|='/vs1g'] {
+a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'],a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vscuter'],a[href|='/vswoah'],a[href|='/vshotdamn'],a[href|='/vsdance3'],a[href|='/vsno'],a[href|='/vsermergerd'],a[href|='/vswatching'],a[href|='/vscrazed'],a[href|='/vsweegee'],a[href|='/weegee'],a[href|='/vsblush'],a[href|='/vsorly'],a[href|='/vsohhaithere'],a[href|='/vsraggle'],a[href|='/vsyay'],a[href|='/riverangry'],a[href|='/riversleep'],a[href|='/vsriver'],a[href|='/iwubu'],a[href|='/vsdoge'],a[href|='/nerdscratch'],a[href|='/vsbooks'],a[href|='/vs0h'],a[href|='/vs2g'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'],a[href|='/vs0f'],a[href|='/vs1f'],a[href|='/vs2f'],a[href|='/vs0g'],a[href|='/vs1g'] {
     display: block;
     clear: none;
     float: left;
@@ -719,6 +719,8 @@ a[href|='/riverangry'] {width:91px; height:100px;background-position: -0px -1050
 a[href|='/riversleep'] {width:137px; height:100px;background-position: -92px -1050px}
 a[href|='/vsriver'] {width:115px; height:100px;background-position: -230px -1050px}
 a[href|='/iwubu'] {width:125px; height:150px;background-position: 0px -1150px}
+a[href|='/vsdoge'] {width:70px; height:70px;background-position: -254px -670px}
+a[href|='/nerdscratch'],a[href|='/vsbooks'] {width:70px; height:74px;background-position: -254px -740px}
 
 /* 0 Column */
 a[href|='/vssuave'],a[href|='/vs0b'] {background-image: url(%%vssheet2%%);width:70px; height:83px;background-position: -145px -145px}
